samples/_failures_safe/1761130121_8e311a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_529f15c8.c: In function ‘main’:
./samples/SAFE/__tmp_529f15c8.c:161:10: error: ‘EVENT_DATA_READ’ undeclared (first use in this function); did you mean ‘EVENT_DATA_READY’?
  161 |         {EVENT_DATA_READ
      |          ^~~~~~~~~~~~~~~
      |          EVENT_DATA_READY
./samples/SAFE/__tmp_529f15c8.c:161:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_529f15c8.c:162: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_529f15c8.c:161:9: note: to match this ‘{’
  161 |         {EVENT_DATA_READ
      |         ^
./samples/SAFE/__tmp_529f15c8.c:161:9: error: expected declaration or statement at end of input
